@@ -3,18 +3,16 @@ package lk.ijse.userservice.service.impl;
 import lk.ijse.userservice.dto.UserRequest;
 import lk.ijse.userservice.dto.UserResponse;
 import lk.ijse.userservice.entity.User;
-import lk.ijse.userservice.exception.ResourceNotFoundException;
 import lk.ijse.userservice.repository.UserRepository;
 import lk.ijse.userservice.service.UserService;
-import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
+@Transactional
 public class UserServiceImpl implements UserService {
 
     private final UserRepository userRepository;
@@ -23,90 +21,101 @@ public class UserServiceImpl implements UserService {
         this.userRepository = userRepository;
     }
 
+
     @Override
-    @Transactional
-    public UserResponse register(User user) {
-        if (userRepository.existsByUsername(user.getUsername())) {
-            throw new IllegalArgumentException("Username already exists");
+    public UserResponse createUser(UserRequest request) {
+
+        if (userRepository.existsByEmail(request.getEmail())) {
+            throw new RuntimeException(
+                    "User with email " + request.getEmail() + " already exists"
+            );
         }
-        if (userRepository.existsByEmail(user.getEmail())) {
-            throw new IllegalArgumentException("Email already exists");
-        }
-        return UserResponse.fromEntity(userRepository.save(user));
+
+        User user = new User();
+
+        user.setName(request.getUsername());
+        user.setEmail(request.getEmail());
+        user.setPassword(request.getPassword());
+
+        User savedUser = userRepository.save(user);
+
+        return UserResponse.fromEntity(savedUser);
     }
+
 
     @Override
     @Transactional(readOnly = true)
-    public Optional<User> findByEmail(String email) {
-        return userRepository.findByEmail(email);
-    }
+    public Optional<UserResponse> findById(Long id) {
 
-    @Override
-    @Transactional(readOnly = true)
-    public Optional<User> findById(Long id) {
-        return userRepository.findById(id);
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public UserResponse getUserByUsername(String username) {
-        User user = userRepository.findByUsername(username)
-                .orElseThrow(() -> new ResourceNotFoundException("User not found with username: " + username));
-        return UserResponse.fromEntity(user);
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public UserResponse getUserById(Long id) {
-        User user = userRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("User not found with id: " + id));
-        return UserResponse.fromEntity(user);
+        return userRepository.findById(id)
+                .map(UserResponse::fromEntity);
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<UserResponse> getAllUsers() {
-        return userRepository.findAll().stream()
+
+        return userRepository.findAll()
+                .stream()
                 .map(UserResponse::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    @Transactional
-    public UserResponse updateUser(Long id, UserRequest request) {
-        User user = userRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("User not found with id: " + id));
+    @Transactional(readOnly = true)
+    public List<UserResponse> searchUsers(String keyword) {
 
-        if (request.getUsername() != null && !request.getUsername().equals(user.getUsername())) {
-            if (userRepository.existsByUsername(request.getUsername())) {
-                throw new IllegalArgumentException("Username already exists");
-            }
-            user.setUsername(request.getUsername());
-        }
-
-        if (request.getEmail() != null && !request.getEmail().equals(user.getEmail())) {
-            if (userRepository.existsByEmail(request.getEmail())) {
-                throw new IllegalArgumentException("Email already exists");
-            }
-            user.setEmail(request.getEmail());
-        }
-
-        if (request.getPassword() != null) {
-            user.setPassword(request.getPassword());
-        }
-
-        try {
-            return UserResponse.fromEntity(userRepository.save(user));
-        } catch (DataIntegrityViolationException ex) {
-            throw new IllegalArgumentException("User data violates unique constraints");
-        }
+        return userRepository
+                .findByUsernameContainingIgnoreCaseOrEmailContainingIgnoreCase(
+                        keyword,
+                        keyword
+                )
+                .stream()
+                .map(UserResponse::fromEntity)
+                .toList();
     }
+
+
+    @Override
+    public UserResponse updateUser(
+            Long id,
+            UserRequest request) {
+
+        User user = userRepository.findById(id)
+                .orElseThrow(() ->
+                        new RuntimeException(
+                                "User not found with id: " + id
+                        )
+                );
+
+        if (!user.getEmail().equals(request.getEmail())
+                && userRepository.existsByEmail(request.getEmail())) {
+
+            throw new RuntimeException(
+                    "User with email " + request.getEmail()
+                            + " already exists"
+            );
+        }
+
+        user.setName(request.getUsername());
+        user.setEmail(request.getEmail());
+        user.setPassword(request.getPassword());
+
+        User updatedUser = userRepository.save(user);
+
+        return UserResponse.fromEntity(updatedUser);
+    }
+
 
     @Override
     public void deleteUser(Long id) {
+
         if (!userRepository.existsById(id)) {
-            throw new ResourceNotFoundException("User not found with id: " + id);
+            throw new RuntimeException(
+                    "User not found with id: " + id
+            );
         }
+
         userRepository.deleteById(id);
     }
 }
